# relex-timeseries-task

./: .gitignore  README.md  pyproject.toml
data/: average_price.csv  category_sales.csv
notebooks/: question_1_modeling.ipynb
src/relex/model/: decomposition.py  definition.py  evaluation.py  forcasting.py  logging.py  summarization.py  training.py  visualization.py
